# perfect_python_project

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
perfect_python_project/: hello_world.py
scripts/: install_hooks.sh
tests/: test_hello_world.py
