[tool.poetry]
name = "perfect-python-project"
version = "0.1.0"
description = ""
authors = ["brennersantos <bs.brenner.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "perfect_python_project"}]

[tool.poetry.dependencies]
python = "^3.9.13"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.3.1"
pytest = "^7.1.3"
blue = "^0.9.1"
isort = "^5.10.1"
pip-audit = "^2.4.4"
pydocstyle = "^6.1.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
